# soll

./: .gitignore  LICENSE  README.md  make_icon.py  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
benchmarks/: README.md
benchmarks/runs/: baseline-metal-2026-04-22.ndjson
docs/: index.html
scripts/: rebuild.sh  reset-onboarding.sh  test-fresh.sh  uninstall.sh
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: bench_pipeline.rs
src-tauri/icons/: build_icons.sh  icon.icns
src-tauri/icons/src/: wave.sh
src-tauri/skills/: email.md  prompt_better.md
src-tauri/src/: audio.rs  cleanup.rs  commands.rs  corrections.rs  dictionary.rs  email.rs  formatter.rs  lib.rs  main.rs  metal.rs  model.rs  onboarding.rs  overlay.rs  paste.rs  pipeline.rs  settings.rs  skills.rs  state.rs  transcribe.rs  tray.rs
src-tauri/src/default_skills/: bullets.md  email.md  formal.md  intro.md  meeting-link.md  out-of-office.md  signature.md  slack.md  summary.md  thanks.md
src/dictionary/: DictionaryApp.tsx
src/legend/: LegendApp.tsx
src/onboarding/: OnboardingApp.tsx  onboarding.css
src/overlay/: OverlayApp.tsx
src/settings/: SettingsApp.tsx
src/settings/panes/: DictionaryPane.tsx  GeneralPane.tsx  LegendPane.tsx  ModelsPane.tsx  SkillsPane.tsx  TipsPane.tsx
