[package]
name = "svara"
version = "0.1.0"
description = "Open-source local-first voice dictation"
authors = ["Svara contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "svara_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process"] }

# Audio capture
cpal = "0.15"

# WAV reader — used by the benchmark harness to replay fixture audio
hound = "3.5"

# Speech-to-text (whisper.cpp bindings, Metal-accelerated on macOS)
whisper-rs = { version = "0.11", features = ["metal"] }

# Clipboard + text injection
arboard = "3"

# HTTP (Ollama client, model download)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
parking_lot = "0.12"
once_cell = "1"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[[example]]
name = "bench_pipeline"
path = "examples/bench_pipeline.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
