[package]
name = "soll"
version = "0.1.0"
description = "Open-source local-first voice dictation"
authors = ["Soll contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "soll_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process"] }

# Audio capture
cpal = "0.15"

# WAV reader — used by the benchmark harness to replay fixture audio
hound = "3.5"

# Personal dictionary storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Dictionary post-processor — case-insensitive word-boundary substitution
regex = "1"

# Speech-to-text (whisper.cpp bindings, Metal-accelerated on macOS)
whisper-rs = { version = "0.11", features = ["metal"] }

# Clipboard + text injection
arboard = "3"

# HTTP (Ollama client, model download)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
parking_lot = "0.12"
once_cell = "1"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
block = "0.1"

[[example]]
name = "bench_pipeline"
path = "examples/bench_pipeline.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Silence the noisy cfg-check warnings that originate inside `objc 0.2`'s
# `msg_send!`/`sel_impl!` macros — the crate uses `#[cfg(feature = "cargo-clippy")]`
# internally, which Rust 1.80+ flags as an unexpected feature. The proper
# fix is migrating to objc2; this is a holding pattern until then.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
